--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@ body {
   border: 1px solid #333;
 }
 
+.white.active{
+  background-color: #CCC;
+}
+
 .black{
   --width: 60px;
   border: 1px solid #333;
@@ -35,4 +39,8 @@ body {
   margin-left: calc(var(--width)/-2);
   margin-right: calc(var(--width)/-2);
   z-index: 2;
+}
+
+.black.active{
+  background-color: #333;
 }
