--- a/styles.css
+++ b/styles.css
@@ -6,36 +6,89 @@
 
 body {
   background-color: #143F6B;
+  padding: 0;
   margin: 0;
-  min-height: 100vh;
-  display: flex;
+  /*min-height: 100vh;*/
+  /*display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center;*/
 }
 
-.wrapper{
+.container{
+  display: grid;
+  /*grid: 1 fr 1 fr / 1 fr 3 fr 1 fr;*/
+  /*justify-content: center;
+  align-items: center;*/
+  /*grid-template-rows: 400 px 400 px;*/
+  grid-template-rows: auto auto;
+  /*grid-template-columns: 1 fr 4 fr 1 fr;*/
+  grid-template-columns: 1 fr 1 fr 1 fr;
+  /*grid-template-areas:
+    "help score settings"
+    "help piano settings";*/
+  grid-gap: 10px;
+  width: 100vw;
+  height: 100vh;
+  /*margin-left: auto;
+  margin-right: auto;*/
+  /*min-height: auto;
+  min-width: auto;*/
+  /*grid-template-columns: 400 px 400 px;
+  grid-template-rows: 100 px 500 px; 100 px;*/
+}
+
+.item-1-help {
+  grid-row: 1 / span 2;
+  grid-column: 1;
+}
+
+.item-2-score {
+  /*display: flex;*/
+  width: var(--width);
+  height: auto;
+  grid-row: 1;
+  grid-column: 2;
+}
+
+#score-1{
+  /*width: 200 px;*/
+  /*width: 500 px;
+  height: 200 px;*/
+}
+
+/*.wrapper{
   display: flex;
   margin-left:auto;
   margin-right:auto;
   height:auto;
   width:auto;
-}
+}*
 
-#score {
+/*#score {*/
   /*background-color: red;*/
-  display: flex;
+  /*display: flex;
   /*height: 200px; /*calc(var(--width)/2);*/
   /*width: 500px
   /*--width: 500px;*/
+/*}*/
+
+.item-3-settings {
+  grid-row: 1 / span 2;
+  grid-column: 3;
 }
 
-.piano {
-  display: flex;
+.item-4-piano {
+  /*grid-area: piano;*/
+  display: flex; /*don't change this*/
+  justify-content: center;
   /*float:left;*/
-  clear: left;
+  /*clear: left;*/
+  grid-row: 2;
+  grid-column: 2;
 }
 
 .key {
+  /*align-content: center;*/
   height: calc(var(--width)*4);
   width: var(--width);
 }
