--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  font-family: Arial, Geneva, Helvetica, sans-serif;
+  color: white;
   background-color: #143F6B;
   padding: 0;
   margin: 0;
@@ -12,6 +14,13 @@ body {
   /*display: flex;
   justify-content: center;
   align-items: center;*/
+}
+
+.header{
+  padding: 5px;
+  text-align: center;
+  color: white;
+  font-size: 15px;
 }
 
 .container{
