--- a/style.css
+++ b/style.css
@@ -12,10 +12,6 @@ body {
   background-color: #121213;
   padding: 0;
   margin: 0;
-  /*min-height: 100vh;*/
-  /*display: flex;
-  justify-content: center;
-  align-items: center;*/
 }
 
 .header{
@@ -27,58 +23,22 @@ body {
 
 .container{
   display: grid;
-  /*grid: 1 fr 1 fr / 1 fr 3 fr 1 fr;*/
-  /*justify-content: center;
-  align-items: center;*/
-  /*grid-template-rows: 400 px 400 px;*/
-  grid-template-rows: auto auto;
-  /*grid-template-columns: 1 fr 4 fr 1 fr;*/
+  grid-template-rows: auto auto auto;
   grid-template-columns: 1 fr 1 fr 1 fr;
-  /*grid-template-areas:
-    "help score settings"
-    "help piano settings";*/
   grid-gap: 10px;
   width: 100vw;
   height: 100vh;
-  /*margin-left: auto;
-  margin-right: auto;*/
-  /*min-height: auto;
-  min-width: auto;*/
-  /*grid-template-columns: 400 px 400 px;
-  grid-template-rows: 100 px 500 px; 100 px;*/
 }
 
 .item-1-help {
+  display: flex;
+  justify-content: center;
   grid-row: 1 / span 2;
   grid-column: 1;
 }
 
-/*.item-2-score-flex-container {
-  /*border: 3px solid #fff;
-  padding: 20px;*/
-  /*display: flex;
-  justify-content: center;
-  /*flex-direction: row;*/
-  /*justify-content: space-between;*/
-  /*align-items: center;*/
-  /*align-content: center;*/
-  /*width: var(--width);
-  height: auto;*/
-  /*grid-row: 1;
-  grid-column: 2;
-}
-
-.flex-child {
-  flex: 1;
-  border: 2px solid yellow;
-}
-
-.flex-child:first-child {
-    margin-right: 30px;
-}*/
-
 .tile-container {
-  grid-row: 1;
+  grid-row: 2;
   grid-column: 2;
   margin-bottom: 30px;
   padding: 20px;
@@ -101,18 +61,47 @@ body {
   margin: 2px;
 }
 
+.grey-overlay {
+  background-color: #3a3a3c !important;
+  border: none !important;
+}
+
+.yellow-overlay{
+  background-color: #b59f3a !important;
+  border: none !important;
+}
+
+.green-overlay {
+  background-color: #538d4e !important;
+  border: none !important;
+}
+
+.message-container{
+  display: flex;
+  justify-content: center;
+  height: 30 px;
+  grid-row: 1;
+  grid-column: 2;
+}
+
+.message-container p{
+  background-color: #818384;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 0;
+}
+
 .item-3-settings {
+  display: flex;
+  justify-content: center;
   grid-row: 1 / span 2;
   grid-column: 3;
 }
 
 .item-4-piano {
-  /*grid-area: piano;*/
   display: flex; /*don't change this*/
   justify-content: center;
-  /*float:left;*/
-  /*clear: left;*/
-  grid-row: 2;
+  grid-row: 3;
   grid-column: 2;
 }
 
@@ -122,7 +111,6 @@ body {
 }
 
 .key {
-  /*align-content: center;*/
   height: calc(var(--width)*3);
   width: var(--width);
 }
