--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   background-color: #121213;
   padding: 0;
   margin: 0;
+  /*justify-content: center;*/
 }
 
 .header{
@@ -20,54 +21,61 @@ body {
   color: white;
   font-size: 15px;
   height: 10vh;
+  /*justify-content: center;*/
 }
 
 .container{
   display: grid;
-  /*grid-template-rows: auto auto auto;*/
-  grid-template-rows: 10% 60% 30%;
-  /*grid-template-columns: 1 fr 1 fr 1 fr;*/
+  grid-template-rows: 5% 65% 30%;
   grid-template-columns: 5% 90% 5%;
-  grid-gap: 10px;
+  /*grid-gap: 10px; necessary?*/
   width: 100vw;
   height: 90vh;
-  padding: 10 px;
 }
 
 .item-1-help {
   display: flex;
-  justify-content: center;
+  /*justify-content: left;*/
   grid-row: 1 / span 2;
   grid-column: 1;
 }
 
 .tile-container {
+  display: flex;
+  flex-direction: column;
   grid-row: 2;
   grid-column: 2;
-  margin-bottom: 10px;
-  padding: 10px;
-  /*height: 40%;*/
+  /*margin-bottom: 0%;*/
+  /*margin: 5%;*/
+  /*padding: 0px;*/
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
-.tile-container div {
-  display: flex;
+/*.tile-container div {
+  display: flex; /*need this so rows are in the right position*/
+  /*height: calc(100%/6); /*6 rows*/
+  /*width: calc(100%/5) /*5 tiles per row*/
+/*}*/
+
+.tile-container .guessRow {
+  display: flex; /*need this so rows are in the right position*/
+  height: calc(85%/6); /*6 rows*/
+  width: 85%;
+  /*width: calc(90%/5); /*5 tiles per row*/
+  align-items: center;
   justify-content: center;
-  /*height: 100px;*/
-  /*--tile-height: auto:*/
-  height: calc(100%/6);
 }
 
 .tile-container .tile {
-  /*width: 150px;*/
-  /*width: var(--tile-width);*/
-  /*--tile-width: 150px;*/
-  /*--tile-width: 10%;
-  height: var(--tile-height);*/
-  height: 100%;
-  border: 1px solid#3a3a3c;
+  /*width: 100%;
+  height: 100%;*/
+  border: 2px solid#3a3a3c;
   box-sizing: border-box;
-  justify-content: center;
-  align-items: center;
+  /*justify-content: center;*/
+  /*align-items: center;*/
   /*color: #ffffff;*/
   background-color: white;
   /*margin: 2px;*/
@@ -95,17 +103,17 @@ body {
 
 .grey-overlay {
   background-color: #3a3a3c !important;
-  border: none !important;
+  /*border: none !important; this seems to change row size due to lack of border...*/
 }
 
 .yellow-overlay{
   background-color: #b59f3a !important;
-  border: none !important;
+  /*border: none !important;*/
 }
 
 .green-overlay {
   background-color: #538d4e !important;
-  border: none !important;
+  /*border: none !important;*/
 }
 
 .message-container{
@@ -125,7 +133,7 @@ body {
 
 .item-3-settings {
   display: flex;
-  justify-content: center;
+  /*justify-content: center;*/
   grid-row: 1 / span 2;
   grid-column: 3;
 }
