--- a/style.css
+++ b/style.css
@@ -70,20 +70,17 @@ body {
 }
 
 .tile-container .tile {
-  /*width: 100%;
-  height: 100%;*/
+  width: 100%;
+  /*height: 100%;*/
   border: 2px solid#3a3a3c;
   box-sizing: border-box;
-  /*justify-content: center;*/
-  /*align-items: center;*/
-  /*color: #ffffff;*/
+  /*justify-content: center;
+  align-items: center;*/
   background-color: white;
-  /*margin: 2px;*/
+  border-radius: 5%;
 }
 
 .tile-container svg {
-  /*justify-content: center;
-  align-items: center;*/
   /*height: 100%;*/
   /*height: calc(var(--tile-height) * 1);*/
   /*height: auto;*/
@@ -151,13 +148,15 @@ body {
   background-color: #0099cc;
   width: calc(100%/16);
   height: 40%;
+  border-radius: 10%;
 }
 
-/*.key {*/
+.key {
+  border-radius: 5%;
   /*height: calc(var(--width)*10);*/
   /*height: 100%*/
   /*width: var(--width);*/
-/*}*/
+}
 
 .key.white{
   /*--width: 70px;*/
