--- a/style.css
+++ b/style.css
@@ -99,17 +99,20 @@ body {
 }
 
 .grey-overlay {
-  background-color: #3a3a3c !important;
+  /*background-color: #3a3a3c !important;*/
+  background: rgba(115, 117, 116, 0.534) !important;
   /*border: none !important; this seems to change row size due to lack of border...*/
 }
 
 .yellow-overlay{
-  background-color: #b59f3a !important;
+  /*background-color: #b59f3a !important;*/
+  background: rgba(241, 229, 117, 0.747) !important;
   /*border: none !important;*/
 }
 
 .green-overlay {
-  background-color: #538d4e !important;
+  /*background-color: #538d4e !important;*/
+  background: rgba(115, 204, 167, 0.925) !important;
   /*border: none !important;*/
 }
 
