--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 
 .tile-container .tile {
   width: 100%;
-  /*height: 100%;*/
+  height: 100%;
   border: 2px solid#3a3a3c;
   box-sizing: border-box;
   /*justify-content: center;
