--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ body {
 
 .item-4-piano {
   display: flex; /*don't change this*/
-  justify-content: center;
+  /*justify-content: center;*/
   /*align-items: start;*/
   grid-row: 3;
   grid-column: 2;
@@ -174,7 +174,7 @@ body {
 
 .item-4-piano button {
   background-color: #0099cc;
-  width: calc(100%/16);
+  width: calc(100%/17);
   height: 40%;
   border-radius: 10%;
 }
@@ -190,7 +190,7 @@ body {
   /*--width: 70px;*/
   height: 100%;
   /*--width: calc(100%/16);*/
-  width: calc(100%/16);
+  width: calc(100%/17);
   background-color: white;
   border: 1px solid #333;
 }
@@ -202,7 +202,7 @@ body {
 .key.black{
   /*--width: 40px;*/
   height: 60%;
-  --width: calc(100%/28);
+  --width: calc(100%/30);
   width: var(--width);
   border: 2px solid #333;
   background-color: black;
