--- a/style.css
+++ b/style.css
@@ -15,36 +15,71 @@ body {
   /*justify-content: center;*/
 }
 
-.header{
+header{
   padding: 1px;
-  text-align: center;
+  /*text-align: center;*/
   color: white;
-  font-size: 15px;
+  /*font-size: 15px;*/
   height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(58, 58, 60);
   /*justify-content: center;*/
 }
 
+/*header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(58, 58, 60);
+}*/
+
+#help,
+#stats {
+  color: rgb(58, 58, 60);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.title {
+  color: gainsboro;
+  /*font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;*/
+  font-size: 2.3rem;
+  /*font-size: 15px;*/
+  font-weight: bold;
+  margin: 0.4rem 0 0.4rem 0;
+  text-align: center;
+}
+
+@media only screen and (max-width: 480px) {
+  .title {
+    font-size: 1.5rem;
+  }
+}
 .container{
   display: grid;
+  /*grid-template-rows: 5% 65% 30%;
+  grid-template-columns: 5% 90% 5%;*/
   grid-template-rows: 5% 65% 30%;
-  grid-template-columns: 5% 90% 5%;
+  grid-template-columns: 100%;
   /*grid-gap: 10px; necessary?*/
   width: 100vw;
   height: 90vh;
 }
 
-.item-1-help {
+/*.item-1-help {
   display: flex;
-  /*justify-content: left;*/
   grid-row: 1 / span 2;
   grid-column: 1;
-}
+}*/
 
 .tile-container {
   display: flex;
   flex-direction: column;
   grid-row: 2;
-  grid-column: 2;
+  grid-column: 1;
   /*margin-bottom: 0%;*/
   /*margin: 5%;*/
   /*padding: 0px;*/
@@ -78,6 +113,13 @@ body {
   align-items: center;*/
   background-color: white;
   border-radius: 5%;
+}
+
+@media only screen and (max-width: 400px) {
+  .tile-container .tile {
+    min-width: 15vw;
+    min-height: 15vw;
+  }
 }
 
 .tile-container svg {
@@ -146,7 +188,7 @@ body {
   justify-content: center;
   /*height: 5 px;*/
   grid-row: 1;
-  grid-column: 2;
+  grid-column: 1;
 }
 
 .message-container p{
@@ -156,19 +198,67 @@ body {
   margin: 0;
 }
 
-.item-3-settings {
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-content {
+  background-color: rgb(18, 18, 19);
+  margin: 5% auto;
+  padding: 20px;
+  width: 80%;
+  color: gainsboro;
+  max-width: 500px;
+}
+
+.modal-content hr {
+  border: 1px solid rgb(58, 58, 60);
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#examples {
+  width: 80%;
+}
+
+.hidden {
+  display: none;
+}
+
+/*.item-3-settings {
   display: flex;
-  /*justify-content: center;*/
   grid-row: 1 / span 2;
   grid-column: 3;
-}
+}*/
 
 .item-4-piano {
   display: flex; /*don't change this*/
   /*justify-content: center;*/
   /*align-items: start;*/
   grid-row: 3;
-  grid-column: 2;
+  grid-column: 1;
   padding: 5px;
 }
 
@@ -196,7 +286,7 @@ body {
 }
 
 .key.white.active{
-  background-color: #CCC;
+  background-color: #CCC !important;
 }
 
 .key.black{
@@ -213,5 +303,5 @@ body {
 }
 
 .key.black.active{
-  background-color: #333;
+  background-color: #333 !important;
 }
