--- a/style.css
+++ b/style.css
@@ -15,18 +15,15 @@ body {
   /*justify-content: center;*/
 }
 
-header{
+/*header{
   padding: 1px;
-  /*text-align: center;*/
   color: white;
-  /*font-size: 15px;*/
   height: 10vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid rgb(58, 58, 60);
-  /*justify-content: center;*/
-}
+}*/
 
 /*header {
   display: flex;
@@ -35,11 +32,34 @@ header{
   border-bottom: 1px solid rgb(58, 58, 60);
 }*/
 
+.title {
+  grid-row: 1;
+  grid-column: 2;
+  padding: 1px;
+  color: white;
+  /*height: 10vh;*/
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(58, 58, 60);
+}
+
 #help,
-#stats {
+#stats,
+#settings {
   color: rgb(58, 58, 60);
   font-size: 1.5rem;
   cursor: pointer;
+  width: 100%;
+  height: 100%;
+  /*height: 100%;
+  width: 100%;*/
+}
+
+.img {
+  max-width: 100%;
+  max-height: auto;
 }
 
 .title {
@@ -60,26 +80,22 @@ header{
 }
 .container{
   display: grid;
-  /*grid-template-rows: 5% 65% 30%;
-  grid-template-columns: 5% 90% 5%;*/
-  grid-template-rows: 5% 65% 30%;
-  grid-template-columns: 100%;
+  z-index: 2;
+  /*grid-template-rows: 5% 65% 30%;*/
+  grid-template-columns: 5% 90% 5%;
+  grid-template-rows: 5% 2% 63% 30%;
+  /*grid-template-rows: 5% 65% 30%;*/
+  /*grid-template-columns: 100%;*/
   /*grid-gap: 10px; necessary?*/
   width: 100vw;
   height: 90vh;
 }
 
-/*.item-1-help {
-  display: flex;
-  grid-row: 1 / span 2;
-  grid-column: 1;
-}*/
-
 .tile-container {
   display: flex;
   flex-direction: column;
-  grid-row: 2;
-  grid-column: 1;
+  grid-row: 3;
+  grid-column: 2;
   /*margin-bottom: 0%;*/
   /*margin: 5%;*/
   /*padding: 0px;*/
@@ -88,12 +104,6 @@ header{
   justify-content: center;
   align-items: center;
 }
-
-/*.tile-container div {
-  display: flex; /*need this so rows are in the right position*/
-  /*height: calc(100%/6); /*6 rows*/
-  /*width: calc(100%/5) /*5 tiles per row*/
-/*}*/
 
 .tile-container .guessRow {
   display: flex; /*need this so rows are in the right position*/
@@ -187,8 +197,8 @@ header{
   display: flex;
   justify-content: center;
   /*height: 5 px;*/
-  grid-row: 1;
-  grid-column: 1;
+  grid-row: 2;
+  grid-column: 2;
 }
 
 .message-container p{
@@ -199,20 +209,28 @@ header{
 }
 
 .modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
+  /*display: none;*/
+  /*position: fixed;*/
+  z-index: 2;
+  /*left: 0;
+  top: 0;*/
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.7);
+  /*color: black;*/
+  background-color: black;
+  /*overflow: auto;*/
+  /*background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.7);*/
+}
+
+#help-modal {
+  grid-row: 1;
+  grid-column: 1;
 }
 
 .modal-content {
-  background-color: rgb(18, 18, 19);
+  /*background-color: rgb(18, 18, 19);*/
+  display: none;
   margin: 5% auto;
   padding: 20px;
   width: 80%;
@@ -247,18 +265,29 @@ header{
   display: none;
 }
 
-/*.item-3-settings {
+.settings-stats {
   display: flex;
-  grid-row: 1 / span 2;
+  /*flex-direction: row;*/
+  grid-row: 1;
   grid-column: 3;
+}
+
+/*#stats-modal {
+  height: 100%;
+  width: 100%;
+}*/
+
+/*.settings {
+  height: 100%;
+  width: 100%;
 }*/
 
 .item-4-piano {
   display: flex; /*don't change this*/
   /*justify-content: center;*/
   /*align-items: start;*/
-  grid-row: 3;
-  grid-column: 1;
+  grid-row: 4;
+  grid-column: 2;
   padding: 5px;
 }
 
