--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid rgb(58, 58, 60);
+  text-align: center;
 }
 
 #help,
@@ -228,6 +229,29 @@ body {
   grid-column: 1;
 }
 
+#help-modal-content {
+  left: 0;
+  top: 0;
+  max-width: 40%;
+  max-height: 30%;
+}
+
+#settings-modal-content {
+  right: 0;
+  top: 0;
+  max-width: 40%;
+  max-height: 30%;
+}
+
+#stats-modal-content {
+  margin: auto;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+
 .modal-content {
   /*background-color: rgb(18, 18, 19);*/
   display: none;
@@ -236,6 +260,19 @@ body {
   width: 80%;
   color: gainsboro;
   max-width: 500px;
+  display: none;
+  position: fixed;
+  z-index: 2;
+  /*left: 0;
+  top: 0;*/
+  border-radius: 2%;
+  /*width: 100%;
+  height: 100%;*/
+  /*color: black;*/
+  background-color: #343434;
+  /*overflow: auto;*/
+  /*background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.7);*/
 }
 
 .modal-content hr {
