--- a/style.css
+++ b/style.css
@@ -39,11 +39,10 @@ body {
   color: white;
   /*height: 10vh;*/
   height: 100%;
-  display: flex;
+  /*display: flex;*/
   align-items: center;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
   border-bottom: 1px solid rgb(58, 58, 60);
-  text-align: center;
 }
 
 #help,
