--- a/style.css
+++ b/style.css
@@ -150,6 +150,19 @@ body {
   /*transform: scale(0.90) translate(8%,10%);*/
 /*}*/
 
+#help-modal-content img {
+  /*height: auto;
+  width: auto;
+  max-width: 80%;
+  max-height: 80%;*/
+  height: 100%;
+  width: 100%;
+  /*transform: scale(2);
+  border: red;
+  border-width: 1px;*/
+  
+}
+
 @media only screen and (min-width: 320px) {
 
   .title {
@@ -327,6 +340,11 @@ body {
   .piano-container button {
     font-size: 1rem;
   }
+
+  #help-modal-content img {
+    width: 80%;
+    height: 80%;
+  }
   
 }
 
@@ -407,6 +425,7 @@ body {
     width: 100% !important;
     height: 100% !important;*/
   }
+
 
 }
  
@@ -691,7 +710,6 @@ body {
   max-width: 40%;
   max-height: 30%;
   overflow-y: auto;
-
 }
 
 #settings-modal-content {
@@ -712,7 +730,6 @@ body {
   position: absolute;
   transform: translate(-50%, -50%);
 }
-
 
 .modal-content {
   /*background-color: rgb(18, 18, 19);*/
