Update button manipulation to stop double tap zoom

--- a/style.css
+++ b/style.css
@@ -973,6 +973,7 @@ input:checked + .slider:before {
   display: flex;
   align-items: center; 
   justify-content: center; 
+  touch-action: manipulation;
 
 }
 
