--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ body {
   margin: 0%;
   /*padding-bottom: 42%;*/
   /*justify-content: center;*/
+  height: 100%;
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 .title {
@@ -82,8 +85,10 @@ body {
   /*width: 96vw;
   height: 96vh;
   padding: 2vh 2vw 2vh 2vw;*/
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
+  width: 100%;
+  height: 100%;
+  /*height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);*/
   /*justify-content: center;
   align-items: center;*/
 }
